--- a/src/assets/styles/Pages.scss
+++ b/src/assets/styles/Pages.scss
@@ -326,7 +326,7 @@
 }
 
 .about-page {
-    background: url('../images/about/bg_opac_10.jpg') no-repeat center/cover fixed;
+    background: url('../images/about/bg_opac_10.webp') no-repeat center/cover fixed;
 
     .content {
         max-width: 850px;
@@ -338,7 +338,7 @@
         box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
 
         .wrapper {
-            background: url('../images/about/bg_opac_10.jpg') no-repeat bottom;
+            background: url('../images/about/bg_opac_10.webp') no-repeat bottom;
             background-position-y: 165px;
             background-size: cover;
             width: 100%;
@@ -583,7 +583,7 @@
 }
 
 .testimonials-page {
-    background: url('../images/about/bg_opac_10.jpg');
+    background: url('../images/about/bg_opac_10.webp');
     background-size: cover;
     background-position: top left;
     background-repeat: no-repeat;
@@ -649,7 +649,7 @@
 }
 
 .portfolio-page {
-    background: url('../images/about/bg_opac_10.jpg');
+    background: url('../images/about/bg_opac_10.webp');
     background-size: cover;
     background-position: top left;
     background-repeat: no-repeat;
@@ -884,11 +884,11 @@
             }
 
             &.image-box-contact-page {
-                background: url('../images/contact/camera.jpg') center/cover no-repeat;
+                background: url('../images/contact/camera.webp') center/cover no-repeat;
             }
 
             &.image-box-booking-page {
-                background: url('../images/booking/calendar.jpg') center/cover no-repeat;
+                background: url('../images/booking/calendar.webp') center/cover no-repeat;
 
                 .image-box-content {
                     background-color: transparent;
