--- a/src/assets/styles/PhotographyPackeges.scss
+++ b/src/assets/styles/PhotographyPackeges.scss
@@ -1,5 +1,5 @@
 .photography-packages {
-    background: url('../images/home/paralax3.jpg') no-repeat top right;
+    background: url('../images/home/paralax3.webp') no-repeat top right;
     background-size: cover;
     background-attachment: fixed;
     display: flex;
