--- a/src/assets/styles/Sliders.scss
+++ b/src/assets/styles/Sliders.scss
@@ -111,7 +111,7 @@
 /* ReviewSlider.css */
 
 .review-slider {
-    background: url('../images/home/paralax1.jpg') no-repeat top right;
+    background: url('../images/home/paralax1.webp') no-repeat top right;
     background-size: cover;
     background-attachment: fixed;
     padding: 5rem 0;
