Fix review slider layput on the Home page

--- a/src/assets/styles/Sliders.css
+++ b/src/assets/styles/Sliders.css
@@ -97,9 +97,8 @@
   background: url("../images/home/paralax1.webp") no-repeat top right;
   background-size: cover;
   background-attachment: fixed;
-  padding: 5rem 0;
-  padding: 5rem;
   display: flex;
+  padding: 5rem;
   /* Arrow custom styles */
   /* Dots custom styles */
   /* Responsive Styles */
@@ -109,16 +108,28 @@
     background: url("../images/home/paralax1a.jpg") no-repeat top right;
     background-size: cover;
     background-attachment: fixed;
-    padding: 5rem 0;
-    padding: 5rem;
-    display: flex;
+  }
+}
+@media (max-width: 600px) {
+  .review-slider {
+    padding: 5rem 1rem;
   }
 }
 .review-slider .slider-container {
   max-width: 400px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  background-color: rgba(200, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.7);
+}
+@media (max-width: 500px) {
+  .review-slider .slider-container {
+    max-width: 250px;
+  }
+}
+@media (max-width: 300px) {
+  .review-slider .slider-container {
+    width: 100%;
+  }
 }
 .review-slider .testimonial-card {
   padding: 1rem;
